--- a/CAPSProj/bin/src/main/resources/templates/Fragments/layout.html
+++ b/CAPSProj/bin/src/main/resources/templates/Fragments/layout.html
@@ -10,53 +10,66 @@
       <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/css/jquery.dataTables_themeroller.css">
 		<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
+		<link rel="stylesheet" th:href="@{/css/portalStyle.css}" />
 </head>
 
 <body>
 	<nav th:fragment="navigationBar" class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">CAPS</a>
+  <a class="navbar-brand" th:href = "@{/}">CAPS</a>
+  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" th:href = "@{/index}">Home</a>
+        <a class="nav-link" th:href = "@{/}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href = "@{/lecturer/enrolment}">View Student Enrollment</a>
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_ADMIN')" th:href = "@{/admin/courselist}">Courses</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_ADMIN')" th:href = "@{/admin/enrolment}">Enrolment</a>
+	  </li>
+
+
+	   <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/gradesandgpa}">Grades And GPA</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/mycourses}">My Courses</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/availablecourselist}">Enroll for a Course</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_STUDENT')" th:href = "@{/student/enrolmentlist}">Enrolment List and Withdraw</a>
+    </li>
+    
+	  
+	  <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_LECTURER')" th:href = "@{/lecturer/coursestaught}">View Courses Taught</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_LECTURER')" th:href = "@{/lecturer/enrolment}">View Course Enrolment</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_LECTURER')" th:href = "@{/lecturer/gradecourse}">Grade a Course</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="hasAnyAuthority('ROLE_LECTURER')" th:href = "@{/lecturer/viewstudentgrades}">View a Student's Performance</a>
+      </li>
+
     </ul>
+		<a href="/logout"><button type="button" class="btn">Logout</button></a>
   </div>
 </nav>
-
-	<div class = "container">
-		<div class = "row">
-			<h2 class = "text-center"> Courses Taught </h2>
-		</div>
-
-	<table id = "table_coursestaught" class="table table-striped">
-		<thead>
-			<tr>
-				<th>S/N</th>
-				<th>Course Id</th>
-				<th>Course Name</th>
-				<th>Maximum Intake</th>
-				<th>Current Enrollment</th>
-			</tr>
-		</thead>
-
-		<tbody>
-			<tr th:each = "coursetaught,iterator: ${coursestaught}">
-				<td th:text = "${iterator.index + 1}"></td>
-				<td th:text = "${coursetaught.courseID}"></td>
-				<td th:text = "${coursetaught.courseName}"></td>
-				<td th:text = "${coursetaught.courseCapacity}"></td>
-				<td th:text = "${coursetaught.currentEnrolment}"></td>
-			</tr>
-		</tbody>
-	</table>
-	</div>
 		<script>
 	  $(document).ready( function () {
     	$('#table_name').DataTable();
