--- a/CAPSProj/bin/src/main/resources/templates/admin/enrolment.html
+++ b/CAPSProj/bin/src/main/resources/templates/admin/enrolment.html
@@ -5,22 +5,40 @@
 
 <body>
 <nav th:replace="Fragments/layout.html :: navigationBar"> </nav>
-<h1>Enrolment Lists</h1>
+<h1 style="text-align:center;">Enrolment Lists</h1>
+<h4 style="text-align:center;">
 <a th:href="@{/admin/addenrolment}"> Add Enrolment</a>
-
-<div class = "container">
+</h4>
+<div align="center">
+<div class = "container-fluid">
 	<div class = "row">
 		<div class = "container">
 			<table id = "table_adminenrolment" class="table table-striped table-bordered">
 				<thead>
 				<tr>
 					<th>No</th>
-					<th>Enrolment ID</th>
+					<th>
+						<a th:href="@{'/admin/enrolpage/' + ${currentPage} + '?sortField=id&sortDir=' + ${reverseSortDir}}">
+							Enrolment ID
+						</a>
+					</th>
 					<th>Student Name</th>
 					<th>Student Email</th>
-					<th>Date of Enrollment</th>
-					<th>Grades</th>
-					<th>Enrolment Status</th>
+					<th>
+						<a th:href="@{'/admin/enrolpage/' + ${currentPage} + '?sortField=dateOfEnrollment&sortDir=' + ${reverseSortDir}}">
+							Date of Enrollment
+						</a>
+					</th>
+					<th>
+						<a th:href="@{'/admin/enrolpage/' + ${currentPage} + '?sortField=grades&sortDir=' + ${reverseSortDir}}">
+							Grades
+						</a>
+					</th>
+					<th>
+						<a th:href="@{'/admin/enrolpage/' + ${currentPage} + '?sortField=enrolmentStatus&sortDir=' + ${reverseSortDir}}">
+							Enrolment Status
+						</a>
+					</th>
 					<th>Course</th>
 					<th>Action</th>
 					<th>Action</th>
@@ -38,20 +56,22 @@
 					<td th:text = "${enrolment.grades}"></td>
 					<td th:text = "${enrolment.enrolmentStatus}"></td>
 					<td th:text = "${enrolment.course.courseName}"></td>
-					<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).PENDING} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).REJECTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).EXPELLED} ">
-						<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).PENDING}">
+						<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).PENDING} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).REJECTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).EXPELLED} ">
+						<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).PENDING}
+									or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).EXPELLED}">
 							<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).PENDING}">
 								<td>
 									<a th:href="@{/admin/approveenrolment/}+${enrolment.id}" > Approve </a>
 								</td>
 								<td>
-									<a th:href="@{/admin/approveenrolment/}+${enrolment.id}" > Reject </a>
+									<a th:href="@{/admin/rejectenrolment/}+${enrolment.id}" > Reject </a>
 								</td>
 								<td>
 									<a th:href="@{/admin/deleteenrolment/}+${enrolment.id}" > Delete </a>
 								</td>
 							</a>
-							<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED}">
+							<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED}
+										or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).EXPELLED}">
 								<td>
 									<a th:href="@{/admin/editenrolment/}+${enrolment.id}" > Edit </a>
 								</td>
@@ -76,10 +96,37 @@
 		</div>
 	</div>
 </div>
-<script>
-	  $(document).ready( function () {
-    	$('#table_adminenrolment').DataTable();
-		} );
-	</script>
+ <div>&nbsp;</div>
+	<div>
+		Total Items: [[${totalItems}]] - Page[[${currentPage}]] of [[${totalPages}]]
+		&nbsp; - &nbsp;
+		
+		<a th:if="${currentPage > 1}" th:href="@{'/admin/enrolpage/1?sortField=' 
+		+ ${sortField} + '&sortDir=' + ${sortDir}}">First</a>
+		<span th:unless="${currentPage > 1}">First</span>
+		&nbsp;&nbsp;
+		<a th:if="${currentPage > 1}" th:href="@{'/admin/enrolpage/' + ${currentPage - 1} 
+		+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Previous</a>
+		<span th:unless="${currentPage  > 1}">Previous</span> &nbsp;&nbsp;
+		
+		
+		<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+			<a th:if="${i != currentPage}" th:href="@{'/admin/enrolpage/' + ${i}} 
+			+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}">[[${i}]]</a>
+			<span th:unless="${i != currentPage}">[[${i}]]</span> &nbsp;&nbsp;
+		</span>
+		
+		<a th:if="${currentPage < totalPages}" th:href="@{'/admin/enrolpage/' + ${currentPage + 1} 
+		+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} }">Next</a>
+		<span th:unless="${currentPage < totalPages}">Next</span> &nbsp;&nbsp;
+		 
+		<a th:if="${currentPage < totalPages}" th:href="@{'/admin/enrolpage/' + ${totalPages} 
+		+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+		<span th:unless="${currentPage < totalPages}">Last</span> &nbsp;&nbsp;
+		<br>
+		<br>
+		
+	</div> 
+	</div>
 </body>
 </html>
