--- a/CAPSProj/bin/src/main/resources/templates/lecturer/coursestaught.html
+++ b/CAPSProj/bin/src/main/resources/templates/lecturer/coursestaught.html
@@ -4,11 +4,12 @@
 <head th:replace="Fragments/layout.html :: headerfiles"> </head>
 
 <body>
+<div>
 	<nav th:replace="Fragments/layout.html :: navigationBar"> </nav>
-
+</div>
 	<div class = "container">
 		<div class = "row">
-			<h2 class = "text-center"> Courses Taught </h2>
+			<h2 class = "text-center" style = "color:black;"> Courses Taught </h2>
 		</div>
 
 	<table id = "table_coursestaught" class="table table-striped table-bordered">
@@ -32,6 +33,7 @@
 			</tr>
 		</tbody>
 	</table>
+					
 	</div>
 		<script>
 	  $(document).ready( function () {
