--- a/CAPSProj/bin/src/main/resources/templates/lecturer/enrolment.html
+++ b/CAPSProj/bin/src/main/resources/templates/lecturer/enrolment.html
@@ -15,26 +15,16 @@
 
 						<div class = "form-group">
 							<label class = "ml-3 mb-3 mr-3"> Course Name: </label>
-								<select name = "courseName">
+								<select name = "courseID" onchange="this.form.submit()">
 									<option disabled selected>Select an Option</option>
 									<option 
 									th:each = "course: ${coursestaught}"
-									th:value = "${course.courseName}"
-									th:text = "${course.courseName}">
+									th:value = "${course.courseID}"
+									th:text = "${course.courseID} + ' ' + ${course.courseName} + ' started on ' + ${course.courseStartDate}">
 									</option>
 								</select>
 						</div>
-
-						<div class = "form-group">
-							<label class = "ml-3 mb-3 mr-3"> Course Start Date: </label>
-							<input type = "date" name = "courseStartDate" class = "form-control" required>
-						</div>
-						
-						<div class = "box-footer float-end mt-3 ml-3 mb-3">
-							<button type="submit" class = "btn btn-primary">
-								Submit
-							</button>
-						</div>
+	
 					</form>
 				</div>
 			</div>
@@ -42,10 +32,11 @@
 	</div>
 
 	<div class = "container">
-		<div class = "row justify-content-center">
+		<div class = "row justify-content-center mt-3">
 			<span th:each = "course : ${selectedCourseName}">
-				<h5 class = "text-center" th:text = "'Course Enrollment Details for: ' + ${course.courseName}"> </h5>
+				<h5 class = "text-center" th:text = "'Course Name: ' + ${course.courseName}"> </h5>
 				<h5 class = "text-center" th:text = "'Course ID: ' + ${course.courseID}"> </h5>
+				<h5 class = "text-center" th:text = "'Course Start Date: ' + ${course.courseStartDate}"></h5>
 			</span>
 		</div>
 
