--- a/CAPSProj/bin/src/main/resources/templates/login.html
+++ b/CAPSProj/bin/src/main/resources/templates/login.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Login</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<title>Login-CAPS</title>
 </head>
 <body>
-<h1>Hello from login</h1>
+<div class="container-fluid text-center">
+	<div>
+		<img th:src="@{/images/schoolLogo.png}" /><br><br>
+	</div>
+	<div th:if="${param.error}">
+		<p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+	</div>
+	<div th:if="${param.Logout}">
+		<p class="text-warning">You have been logged out</p>
+	</div>
+	<form th:action="@{/home/login}" method="post" style="max-width:350px; margin: 0 auto;">
+		<div class = "border border-secondary p-3 rounded">
+			<p>Access to CAPS portal</p>
+			<p>
+				<input type="email" name="email" class="form-control" placeholder="E-mail" required autofocus />
+			</p>
+			<p>
+				<input type="password" name="password" class="form-control" placeholder="Password" required />
+			</p>
+			<p>
+				<input type="submit" value="Login" class="btn btn-primary" />
+			</p>
+			<p>
+				<a th:href="@{/forgot_password}">Forgot your password?</a>
+			</p>
+			
+		
+		</div>
+	
+	</form>
+		
+</div>
 </body>
 </html>
