--- a/CAPSProj/bin/src/main/resources/templates/student/gradesandgpa.html
+++ b/CAPSProj/bin/src/main/resources/templates/student/gradesandgpa.html
@@ -3,11 +3,23 @@
 <head th:replace="Fragments/layout.html :: headerfiles"> </head>
 <body>
 <nav th:replace="Fragments/layout.html :: navigationBar"> </nav>
-<h1>Grades And GPA</h1>
+<h1 class="text-center">Grades And GPA</h1>
+&nbsp;
+<div class="text-center">
+	 <div sec:authorize="isAuthenticated()">
+		 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		 Welcome <b><span th:text =${firstName}>first name</span></b>
+		&nbsp;
+		<span sec:authentication="principal.role">Roles</span>
+		<br><br>
+		
+	</div>
+</div>	
 
 <div class = "container"> 
 	<div class = "row">
 		<div class = "container">
+			
 <table id = "table_gradesgpa" class="table table-striped table-bordered">
 
 	<thead>
@@ -38,26 +50,20 @@
 	</tbody>
 	
 </table>&nbsp;&nbsp;
-		</div>
-	</div>
-</div>
+	<div>
+	<h5><a th:text=" 'Credits Earned: ' + ${totalCredits}">CreditsEarned</a></h5>
+	</div> &nbsp;&nbsp;
 
-
-<div>
-	<span><a th:text=" 'Credits Earned:' + ${totalCredits}">CGPA</a></span>
-</div> &nbsp;&nbsp;
-
-
-<div>
-	<span><a th:text=" 'CGPA:' + ${cgpa}">CGPA</a></span>
-</div>&nbsp;&nbsp;
 
 	<div>
-	<!-- temporarily view student of userID == 1 -->	
-	<button><a th:href="@{/student/lecturercourses}">Enroll for a course</a></button>
-	<button><a th:href="@{/student/enrolmentlist}">View Enrolment List and Withdraw</a></button>
-	<button><a th:href="@{/student/mycourses}">View My Courses</a></button>
+	<h5><a th:text=" 'CGPA: ' + ${cgpa}">CGPA</a></h5>
+	</div>&nbsp;&nbsp;
+
+
+		</div>
 	</div>
+</div>&nbsp;&nbsp;
+
 	<script>
 	  $(document).ready( function () {
     	$('#table_gradesgpa').DataTable();
