--- a/CAPSProj/bin/src/main/resources/templates/student/mycourses.html
+++ b/CAPSProj/bin/src/main/resources/templates/student/mycourses.html
@@ -4,7 +4,18 @@
 <body>
 <nav th:replace="Fragments/layout.html :: navigationBar"> </nav>
 
-<h1>My Courses</h1>
+<h1 class="text-center">My Courses</h1>
+
+&nbsp;
+<div class="text-center">
+	 <div sec:authorize="isAuthenticated()">
+		 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		 Welcome <b><span th:text =${firstName}>first name</span></b>
+		&nbsp;
+		<span sec:authentication="principal.role">Roles</span>
+		<br><br>	
+	</div>
+</div>	
 
 <div class = "container">
 	<div class = "row">
@@ -12,7 +23,7 @@
 <table id = "table_mycourses" class="table table-striped table-bordered">
 
 	<thead>
-
+	
 		<tr>
 			<th>NO</th>
 			<th>Course ID</th>
@@ -37,13 +48,6 @@
 	      		<span th:if= "${user.role == T(sg.edu.iss.caps.model.Roles).LECTURER}" th:text="${user.firstName} + ' ' + ${user.lastName}"> Lecturer Name </span>
 	      	</p>  
 	        </td>
-
-			<!-- <span th:each="user: ${enrolment.course.users}"> 
-               <a th:if= "${user.role == T(sg.edu.iss.caps.model.Roles).LECTURER}">
-                    <td th:text="${user.firstName} + ' ' + ${user.lastName}">Lecturer Name</td>
-               </a>
-           </span>	 -->
-           
            <td th:text="${#temporals.format(enrolment.course.courseStartDate, 'yyyy-MM-dd')}">CourseSartDate</td>
            <td th:text="${#temporals.format(enrolment.course.courseEndDate, 'yyyy-MM-dd')}">CourseEndDate</td>
 		<td th:text="${enrolment.course.courseStatus}">CourseStatus</td>						
@@ -52,14 +56,11 @@
 	</tbody>
 	
 </table>
-
-	<!-- temporarily view student of userID == 1 -->
-	<button><a th:href="@{/student/lecturercourses}">Enroll for a course</a></button>
-	<button><a th:href="@{/student/enrolmentlist/1}">View Enrolment List and Withdraw</a></button>
-	<button><a th:href="@{/student/gradesandgpa/1}">View Grades & GPA</a></button>
+	
 		</div>
+	
 	</div>
-</div>
+</div>&nbsp;&nbsp;
 <script>
 	  $(document).ready( function () {
     	$('#table_mycourses').DataTable();
