Fixed bug with edit lecturer cancelling all the lecturer's courses

--- a/CAPSProj/src/main/resources/templates/admin/EditUser.html
+++ b/CAPSProj/src/main/resources/templates/admin/EditUser.html
@@ -31,6 +31,7 @@
 			<input type="hidden" th:field="*{password}" /><br><br>
 			<input type="hidden" th:field="*{userID}" />
 			<input type="hidden" th:field="*{enabled}" />
+			<input type = "hidden" th:field="*{courses}">
 
 			<label>Email:</label>
 			<input type="text" th:field="*{email}" /><br><br>
