--- a/CAPSProj/src/main/resources/templates/userProfileForm.html
+++ b/CAPSProj/src/main/resources/templates/userProfileForm.html
@@ -37,6 +37,7 @@
 				<input type = "hidden" th:field="*{enabled}"/>
 				<input type = "hidden" th:field="*{salutation}" th:value="${salutation}"/>
 				<input type = "hidden" th:field="*{role}"/>
+				<input type = "hidden" th:field="*{courses}">
 				
 				<label>Email:</label>
 				<input type = "text" th:field="*{email}"/><br><br>
